--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,31 @@
+@font-face {
+  font-family: "Montserrat ExtraBold";
+  src: url("./assets/fonts/Montserrat-ExtraBold.ttf");
+}
+@font-face {
+  font-family: "Montserrat Bold";
+  src: url("./assets/fonts/Montserrat-Bold.ttf");
+}
+@font-face {
+  font-family: "Montserrat SemiBold";
+  src: url("./assets/fonts/Montserrat-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Montserrat Regular";
+  src: url("./assets/fonts/Montserrat-Regular.ttf");
+}
+@font-face {
+  font-family: "Montserrat Medium";
+  src: url("./assets/fonts/Montserrat-Medium.ttf");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #088395; */
+  background-image: url('/src/assets/imgs/bg.png');
+  background-size: cover;
 }
 
 code {
